# pycon-apac-2023

./: .gitignore  README.md  module_finder.py  pyproject.toml  run_bigtechcorp.py  run_greet_all.py
bigtechcorp_dbtools/bigtechcorp/: database_functions.py
bigtechcorp_mltools/bigtechcorp/: machine_learning_functions.py
bigtechcorp_utils/bigtechcorp/: core_functions.py
docs/: import_step_by_step.md
src/: greetings_error.py  run.py
src/greetings/: __init__.py  __main__.py  greet.py
src/greetings/friends/: cat.py  dog.py  human.py
src/greetings_error/friends/: cat.py  dog.py  human.py
src/greetings_error/util/: message.py
tests/greetings/friends/: test_cat.py
tests/greetings_error/friends/: test_cat.py
